# TerraPanel

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.example.yaml  pyproject.toml
.github/workflows/: publish-container.yml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: ui.spec.ts
frontend/src/: App.vue  api.ts  styles.css
frontend/src/components/: TaskManager.vue
scripts/: start.sh
src/terrapanel/: __main__.py  app.py  cli.py  config.py  path_policy.py
src/terrapanel/api/: dependencies.py  router.py
src/terrapanel/api/routes/: backups.py  files.py  health.py  instance.py  provisioning.py  server_content.py  tasks.py
src/terrapanel/domain/: errors.py  files.py  instance.py  process.py  provisioning.py  server_content.py  startup.py  tasks.py
src/terrapanel/repository/: instance_repository.py  provision_repository.py  task_repository.py
src/terrapanel/services/: backup_service.py  container.py  file_service.py  instance_service.py  log_service.py  mod_service.py  official_installer.py  process_manager.py  provisioning_service.py  server_config_service.py  startup_settings_service.py  task_service.py  world_service.py
src/terrapanel/static/: index.html
tests/: conftest.py  test_app.py  test_backup_service.py  test_config.py  test_instance_service.py  test_management_actions.py  test_mod_upload.py  test_mvp_api.py  test_path_policy.py  test_process_manager.py  test_provisioning_service.py  test_server_content.py  test_world_management.py
(+17 files in other folders)
